# nrf24

./: Cargo.toml
src/: base.rs  lib.rs
src/common/: command.rs  crc.rs  datarate.rs  delay.rs  gain.rs  mod.rs  pipe.rs  power.rs  register.rs  state.rs  status.rs  width.rs
src/rx/: config.rs  mod.rs  pipe.rs
